Update social network icons and connect action button

--- a/index.html
+++ b/index.html
@@ -36,14 +36,28 @@
           you see and have a project you need coded, don’t hestiate to contact
           me.
         </p>
-        <h3>Let's connect</h3>
-        <div class="social">
-          <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
-          <a href="#"><img src="icons/linkedin.svg" alt="linkedin logo" /></a>
-          <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
-          <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
-          <a href="#"><img src="icons/angellist.svg" alt="angellist logo" /></a>
-        </div>
+        <p class="connect_btn">
+          <a href="#">Let's connect</a>
+        </p>
+        <ul class="social">
+          <li>
+            <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="icons/linkedin.svg" alt="linkedin logo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="icons/angellist.svg" alt="angellist logo"
+            /></a>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
