--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- start toolbar -->
     <header>
       <div class="logo_placeholder">
-        <a href="index.html" class="logo">My Logo</a>
+        <a href="index.html" class="logo primary_b">My Logo</a>
       </div>
-      <nav class="btn">
+      <nav class="btn menu_btn">
         <i class="material-icons colored">menu</i>
       </nav>
     </header>
@@ -27,8 +27,8 @@
     <main class="shapes_bg">
       <section class="headline">
         <hgroup>
-          <h1>I’m Radmila</h1>
-          <h2>Glad to see you!</h2>
+          <h1 class="primary_title neutral_b">I’m Radmila</h1>
+          <h2 class="primary_title neutral_b">Glad to see you!</h2>
         </hgroup>
         <p>
           I’m a software developer! I can help you build a product , feature or
@@ -36,9 +36,7 @@
           you see and have a project you need coded, don’t hestiate to contact
           me.
         </p>
-        <p class="connect_btn">
-          <a href="#">Let's connect</a>
-        </p>
+        <p class="connect_btn primary_n supporting_txt upper">Let's connect</p>
         <ul class="social">
           <li>
             <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
@@ -60,5 +58,229 @@
         </ul>
       </section>
     </main>
+
+    <ul class="works_section">
+      <li class="work_card">
+        <img src="./img/snapshoot1.png" alt="preview project 1" />
+        <ul class="card_details">
+          <li title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Tonic</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </li>
+          <li title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </li>
+          <li>
+            <ul class="tags">
+              <li class="btn btn_small tag_btn">html</li>
+              <li class="btn btn_small tag_btn">css</li>
+              <li class="btn btn_small tag_btn">javaScript</li>
+            </ul>
+          </li>
+          <li class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </li>
+        </ul>
+      </li>
+      <li class="work_card">
+        <img src="./img/snapshoot2.png" alt="preview project 2" />
+        <ul class="card_details">
+          <li title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </li>
+          <li title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </li>
+          <li>
+            <ul class="tags">
+              <li class="btn btn_small tag_btn">html</li>
+              <li class="btn btn_small tag_btn">css</li>
+              <li class="btn btn_small tag_btn">javaScript</li>
+            </ul>
+          </li>
+          <li class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </li>
+        </ul>
+      </li>
+      <li class="work_card">
+        <img src="./img/snapshoot3.png" alt="preview project 3" />
+        <ul class="card_details">
+          <li title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Tonic</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </li>
+          <li title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </li>
+          <li>
+            <ul class="tags">
+              <li class="btn btn_small tag_btn">html</li>
+              <li class="btn btn_small tag_btn">css</li>
+              <li class="btn btn_small tag_btn">javaScript</li>
+            </ul>
+          </li>
+          <li class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </li>
+        </ul>
+      </li>
+      <li class="work_card">
+        <img src="./img/snapshoot4.png" alt="preview project 4" />
+        <ul class="card_details">
+          <li title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </li>
+          <li title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </li>
+          <li>
+            <ul class="tags">
+              <li class="btn btn_small tag_btn">html</li>
+              <li class="btn btn_small tag_btn">css</li>
+              <li class="btn btn_small tag_btn">javaScript</li>
+            </ul>
+          </li>
+          <li class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <div class="about_section">
+      <ul class="top">
+        <li>
+          <h1 class="primary_title neutral_b">
+            About <br />
+            Myself
+          </h1>
+        </li>
+        <li>
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </li>
+        <li class="connect_btn primary_n supporting_txt upper">
+          Let's connect
+        </li>
+        <li>
+          <ul class="social">
+            <li>
+              <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/linkedin.svg" alt="linkedin logo" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/angellist.svg" alt="angellist logo" />
+              </a>
+            </li>
+            <li>
+              <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+            </li>
+          </ul>
+        </li>
+        <li class="action">
+          <a href="#" class="btn btn_normal enabled">Get my resume</a>
+        </li>
+      </ul>
+
+      <ul class="skills">
+        <li>
+          <ul class="skill_frame">
+            <li class="skill_name">Languages</li>
+            <li class="btn menu_btn expand_collapse">
+              <i class="material-icons">expand_more</i>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul class="skill_content">
+            <li class="skill_item">
+              <img
+                src="./img/icon_js.png"
+                class="skill_item_icon"
+                alt="Javascript Icon"
+              />
+              <p class="skill_item_name">JavaScript</p>
+            </li>
+
+            <li class="skill_item">
+              <img
+                src="./img/icon_html.png"
+                class="skill_item_icon"
+                alt="Html Icon"
+              />
+              <p class="skill_item_name upper">HTML</p>
+            </li>
+
+            <li class="skill_item">
+              <img
+                src="./img/icon_css.png"
+                class="skill_item_icon"
+                alt="CSS Icon"
+              />
+              <p class="skill_item_name upper">css</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <ul class="skill_frame separator">
+            <li class="skill_name">Framewokrs</li>
+            <li class="btn menu_btn expand_collapse">
+              <i class="material-icons">chevron_right</i>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <ul class="skill_frame separator">
+            <li class="skill_name">Skills</li>
+            <li class="btn menu_btn expand_collapse">
+              <i class="material-icons">chevron_right</i>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
