Update codebase structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           you see and have a project you need coded, don’t hestiate to contact
           me.
         </p>
-        <p class="connect_btn primary_n supporting_txt upper">Let's connect</p>
+        <p class="connect primary_n supporting_txt upper">Let's connect</p>
         <ul class="social">
           <li>
             <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
@@ -59,169 +59,178 @@
       </section>
     </main>
 
-    <ul class="works_section">
-      <li class="work_card">
+    <section class="works_section">
+      <article class="work_card">
         <img src="./img/snapshoot1.png" alt="preview project 1" />
-        <ul class="card_details">
-          <li title="project_details" class="project_details_wrapper">
-            <h3 class="project_title neutral_b">Tonic</h3>
-            <ul class="project_details">
-              <li title="client" class="projet_info upper neutral_n">Canopy</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="role" class="projet_info grey">Back End Dev</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="year" class="projet_info grey">2015</li>
-            </ul>
-          </li>
-          <li title="project_description" class="neutral_n primary_txt">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </li>
-          <li>
-            <ul class="tags">
-              <li class="btn btn_small tag_btn">html</li>
-              <li class="btn btn_small tag_btn">css</li>
-              <li class="btn btn_small tag_btn">javaScript</li>
-            </ul>
-          </li>
-          <li class="action">
-            <a href="#" class="btn btn_normal enabled">See Project</a>
-          </li>
-        </ul>
-      </li>
-      <li class="work_card">
-        <img src="./img/snapshoot2.png" alt="preview project 2" />
-        <ul class="card_details">
-          <li title="project_details" class="project_details_wrapper">
-            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
-            <ul class="project_details">
-              <li title="client" class="projet_info upper neutral_n">Canopy</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="role" class="projet_info grey">Back End Dev</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="year" class="projet_info grey">2015</li>
-            </ul>
-          </li>
-          <li title="project_description" class="neutral_n primary_txt">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </li>
-          <li>
-            <ul class="tags">
-              <li class="btn btn_small tag_btn">html</li>
-              <li class="btn btn_small tag_btn">css</li>
-              <li class="btn btn_small tag_btn">javaScript</li>
-            </ul>
-          </li>
-          <li class="action">
-            <a href="#" class="btn btn_normal enabled">See Project</a>
-          </li>
-        </ul>
-      </li>
-      <li class="work_card">
-        <img src="./img/snapshoot3.png" alt="preview project 3" />
-        <ul class="card_details">
-          <li title="project_details" class="project_details_wrapper">
-            <h3 class="project_title neutral_b">Tonic</h3>
-            <ul class="project_details">
-              <li title="client" class="projet_info upper neutral_n">Canopy</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="role" class="projet_info grey">Back End Dev</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="year" class="projet_info grey">2015</li>
-            </ul>
-          </li>
-          <li title="project_description" class="neutral_n primary_txt">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </li>
-          <li>
-            <ul class="tags">
-              <li class="btn btn_small tag_btn">html</li>
-              <li class="btn btn_small tag_btn">css</li>
-              <li class="btn btn_small tag_btn">javaScript</li>
-            </ul>
-          </li>
-          <li class="action">
-            <a href="#" class="btn btn_normal enabled">See Project</a>
-          </li>
-        </ul>
-      </li>
-      <li class="work_card">
-        <img src="./img/snapshoot4.png" alt="preview project 4" />
-        <ul class="card_details">
-          <li title="project_details" class="project_details_wrapper">
-            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
-            <ul class="project_details">
-              <li title="client" class="projet_info upper neutral_n">Canopy</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="role" class="projet_info grey">Back End Dev</li>
-              <li><i class="material-icons small grey">circle</i></li>
-              <li title="year" class="projet_info grey">2015</li>
-            </ul>
-          </li>
-          <li title="project_description" class="neutral_n primary_txt">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </li>
-          <li>
-            <ul class="tags">
-              <li class="btn btn_small tag_btn">html</li>
-              <li class="btn btn_small tag_btn">css</li>
-              <li class="btn btn_small tag_btn">javaScript</li>
-            </ul>
-          </li>
-          <li class="action">
-            <a href="#" class="btn btn_normal enabled">See Project</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
 
-    <div class="about_section">
-      <ul class="top">
-        <li>
-          <h1 class="primary_title neutral_b">
-            About <br />
-            Myself
-          </h1>
-        </li>
-        <li>
+        <div class="card_details">
+          <div title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Tonic</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </div>
+
+          <p title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
+          <ul class="tags">
+            <li class="btn btn_small tag_btn">html</li>
+            <li class="btn btn_small tag_btn">css</li>
+            <li class="btn btn_small tag_btn">javaScript</li>
+          </ul>
+
+          <div class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="work_card">
+        <img src="./img/snapshoot2.png" alt="preview project 2" />
+
+        <div class="card_details">
+          <div title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </div>
+
+          <p title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
+          <ul class="tags">
+            <li class="btn btn_small tag_btn">html</li>
+            <li class="btn btn_small tag_btn">css</li>
+            <li class="btn btn_small tag_btn">javaScript</li>
+          </ul>
+
+          <div class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="work_card">
+        <img src="./img/snapshoot3.png" alt="preview project 3" />
+
+        <div class="card_details">
+          <div title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Tonic</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </div>
+
+          <p title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
+          <ul class="tags">
+            <li class="btn btn_small tag_btn">html</li>
+            <li class="btn btn_small tag_btn">css</li>
+            <li class="btn btn_small tag_btn">javaScript</li>
+          </ul>
+
+          <div class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="work_card">
+        <img src="./img/snapshoot4.png" alt="preview project 4" />
+
+        <div class="card_details">
+          <div title="project_details" class="project_details_wrapper">
+            <h3 class="project_title neutral_b">Multi-Post Stories</h3>
+            <ul class="project_details">
+              <li title="client" class="projet_info upper neutral_n">Canopy</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="role" class="projet_info grey">Back End Dev</li>
+              <li><i class="material-icons small grey">circle</i></li>
+              <li title="year" class="projet_info grey">2015</li>
+            </ul>
+          </div>
+
+          <p title="project_description" class="neutral_n primary_txt">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+
+          <ul class="tags">
+            <li class="btn btn_small tag_btn">html</li>
+            <li class="btn btn_small tag_btn">css</li>
+            <li class="btn btn_small tag_btn">javaScript</li>
+          </ul>
+
+          <div class="action">
+            <a href="#" class="btn btn_normal enabled">See Project</a>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <section class="about_section">
+      <div class="top">
+        <h1 class="primary_title neutral_b">
+          About <br />
+          Myself
+        </h1>
+
+        <p>
           Hello I’m a software developer! I can help you build a product ,
           feature or website Look through some of my work and experience! If you
           like what you see and have a project you need coded, don’t hestiate to
           contact me.
-        </li>
-        <li class="connect_btn primary_n supporting_txt upper">
-          Let's connect
-        </li>
-        <li>
-          <ul class="social">
-            <li>
-              <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="icons/linkedin.svg" alt="linkedin logo" />
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="icons/angellist.svg" alt="angellist logo" />
-              </a>
-            </li>
-            <li>
-              <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
-            </li>
-          </ul>
-        </li>
-        <li class="action">
+        </p>
+
+        <h2 class="connect primary_n supporting_txt upper">Let's connect</h2>
+
+        <ul class="social">
+          <li>
+            <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="icons/linkedin.svg" alt="linkedin logo" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="icons/angellist.svg" alt="angellist logo" />
+            </a>
+          </li>
+          <li>
+            <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+          </li>
+        </ul>
+
+        <div class="action">
           <a href="#" class="btn btn_normal enabled">Get my resume</a>
-        </li>
-      </ul>
+        </div>
+      </div>
 
       <ul class="skills">
         <li>
@@ -265,7 +274,7 @@
 
         <li>
           <ul class="skill_frame separator">
-            <li class="skill_name">Framewokrs</li>
+            <li class="skill_name">Frameworks</li>
             <li class="btn menu_btn expand_collapse">
               <i class="material-icons">chevron_right</i>
             </li>
@@ -281,6 +290,6 @@
           </ul>
         </li>
       </ul>
-    </div>
+    </section>
   </body>
 </html>
