Add heading and descriptive text to Contact-me section

--- a/index.html
+++ b/index.html
@@ -189,107 +189,118 @@
       </article>
     </section>
 
-    <section class="about_section">
-      <div class="top">
-        <h1 class="primary_title neutral_b">
-          About <br />
-          Myself
-        </h1>
+    <div class="about_base">
+      <section class="about_section">
+        <div class="top">
+          <h1 class="primary_title neutral_b">
+            About <br />
+            Myself
+          </h1>
 
-        <p>
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
-          like what you see and have a project you need coded, don’t hestiate to
-          contact me.
-        </p>
+          <p>
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
 
-        <h2 class="connect primary_n supporting_txt upper">Let's connect</h2>
+          <h2 class="connect primary_n supporting_txt upper">Let's connect</h2>
 
-        <ul class="social">
+          <ul class="social">
+            <li>
+              <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/linkedin.svg" alt="linkedin logo" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/angellist.svg" alt="angellist logo" />
+              </a>
+            </li>
+            <li>
+              <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+            </li>
+          </ul>
+
+          <div class="action">
+            <a href="#" class="btn btn_normal enabled">Get my resume</a>
+          </div>
+        </div>
+
+        <ul class="skills">
           <li>
-            <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+            <ul class="skill_frame">
+              <li class="skill_name">Languages</li>
+              <li class="btn menu_btn expand_collapse">
+                <i class="material-icons">expand_more</i>
+              </li>
+            </ul>
           </li>
           <li>
-            <a href="#">
-              <img src="icons/linkedin.svg" alt="linkedin logo" />
-            </a>
+            <ul class="skill_content">
+              <li class="skill_item">
+                <img
+                  src="./img/icon_js.png"
+                  class="skill_item_icon"
+                  alt="Javascript Icon"
+                />
+                <p class="skill_item_name">JavaScript</p>
+              </li>
+
+              <li class="skill_item">
+                <img
+                  src="./img/icon_html.png"
+                  class="skill_item_icon"
+                  alt="Html Icon"
+                />
+                <p class="skill_item_name upper">HTML</p>
+              </li>
+
+              <li class="skill_item">
+                <img
+                  src="./img/icon_css.png"
+                  class="skill_item_icon"
+                  alt="CSS Icon"
+                />
+                <p class="skill_item_name upper">css</p>
+              </li>
+            </ul>
           </li>
+
           <li>
-            <a href="#">
-              <img src="icons/angellist.svg" alt="angellist logo" />
-            </a>
+            <ul class="skill_frame separator">
+              <li class="skill_name">Frameworks</li>
+              <li class="btn menu_btn expand_collapse">
+                <i class="material-icons">chevron_right</i>
+              </li>
+            </ul>
           </li>
+
           <li>
-            <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+            <ul class="skill_frame separator">
+              <li class="skill_name">Skills</li>
+              <li class="btn menu_btn expand_collapse">
+                <i class="material-icons">chevron_right</i>
+              </li>
+            </ul>
           </li>
         </ul>
+      </section>
 
-        <div class="action">
-          <a href="#" class="btn btn_normal enabled">Get my resume</a>
-        </div>
-      </div>
-
-      <ul class="skills">
-        <li>
-          <ul class="skill_frame">
-            <li class="skill_name">Languages</li>
-            <li class="btn menu_btn expand_collapse">
-              <i class="material-icons">expand_more</i>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <ul class="skill_content">
-            <li class="skill_item">
-              <img
-                src="./img/icon_js.png"
-                class="skill_item_icon"
-                alt="Javascript Icon"
-              />
-              <p class="skill_item_name">JavaScript</p>
-            </li>
-
-            <li class="skill_item">
-              <img
-                src="./img/icon_html.png"
-                class="skill_item_icon"
-                alt="Html Icon"
-              />
-              <p class="skill_item_name upper">HTML</p>
-            </li>
-
-            <li class="skill_item">
-              <img
-                src="./img/icon_css.png"
-                class="skill_item_icon"
-                alt="CSS Icon"
-              />
-              <p class="skill_item_name upper">css</p>
-            </li>
-          </ul>
-        </li>
-
-        <li>
-          <ul class="skill_frame separator">
-            <li class="skill_name">Frameworks</li>
-            <li class="btn menu_btn expand_collapse">
-              <i class="material-icons">chevron_right</i>
-            </li>
-          </ul>
-        </li>
-
-        <li>
-          <ul class="skill_frame separator">
-            <li class="skill_name">Skills</li>
-            <li class="btn menu_btn expand_collapse">
-              <i class="material-icons">chevron_right</i>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+      <section class="contact-me_section contact-me_sect_bg">
+        <h2 class="primary_title contact_title">Contact me</h2>
+        <p class="contact_txt">
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
+      </section>
+    </div>
   </body>
 </html>
