--- a/index.html
+++ b/index.html
@@ -300,6 +300,44 @@
           that you need built or a project that needs coding. I’d love to help
           with it
         </p>
+
+        <form
+          class="contact-form"
+          action="https://formspree.io/f/mdoyzdon"
+          method="POST"
+        >
+          <ul>
+            <li>
+              <input
+                name="name"
+                type="text"
+                maxlength="30"
+                placeholder="Write your name here"
+                required
+              />
+            </li>
+            <li>
+              <input
+                name="email"
+                type="email"
+                placeholder="your_email@mail.com"
+                required
+              />
+            </li>
+            <li>
+              <textarea
+                class="text-message"
+                name="message"
+                id="message"
+                rows="5"
+                maxlength="500"
+                placeholder="Write your message here"
+                required
+              ></textarea>
+            </li>
+            <li></li>
+          </ul>
+        </form>
       </section>
     </div>
   </body>
