Add media queries to About-Section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </article>
 
-      <article class="work_card bg_white">
+      <article class="work_card bg_white even">
         <img src="./img/snapshoot2.png" alt="preview project 2" />
 
         <div class="card_details">
@@ -192,7 +192,7 @@
         </div>
       </article>
 
-      <article class="work_card bg_white">
+      <article class="work_card bg_white even">
         <img src="./img/snapshoot4.png" alt="preview project 4" />
 
         <div class="card_details">
