Add desktop version background images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
     <section id="Portfolio" class="works_section">
       <article class="work_card bg_white">
-        <img src="./img/snapshoot1.png" alt="preview project 1" />
+        <div class="img">
+          <img src="./img/snapshoot1.png" alt="preview project 1" />
+        </div>
 
         <div class="card_details">
           <div title="project_details" class="project_details_wrapper">
@@ -114,8 +116,10 @@
         </div>
       </article>
 
-      <article class="work_card bg_white even">
-        <img src="./img/snapshoot2.png" alt="preview project 2" />
+      <article class="work_card bg_white">
+        <div class="img">
+          <img src="./img/snapshoot2.png" alt="preview project 2" />
+        </div>
 
         <div class="card_details">
           <div title="project_details" class="project_details_wrapper">
@@ -154,7 +158,9 @@
       </article>
 
       <article class="work_card bg_white">
-        <img src="./img/snapshoot3.png" alt="preview project 3" />
+        <div class="img">
+          <img src="./img/snapshoot3.png" alt="preview project 3" />
+        </div>
 
         <div class="card_details">
           <div title="project_details" class="project_details_wrapper">
@@ -192,8 +198,10 @@
         </div>
       </article>
 
-      <article class="work_card bg_white even">
-        <img src="./img/snapshoot4.png" alt="preview project 4" />
+      <article class="work_card bg_white">
+        <div class="img">
+          <img src="./img/snapshoot4.png" alt="preview project 4" />
+        </div>
 
         <div class="card_details">
           <div title="project_details" class="project_details_wrapper">
