Fix linter errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- start toolbar -->
     <header class="bg_white">
       <div class="logo_placeholder">
-        <a href="index.html" class="logo primary_b">My Logo</a>
+        <a href="index.html" class="logo xs-transparent_btn primary_b"
+          >My Logo</a
+        >
       </div>
       <nav>
         <ul class="menu">
@@ -346,7 +348,7 @@
 
       <section id="Contact" class="contact-me_section contact-me_sect_bg">
         <div class="content_wrapper">
-          <h2 class="main_title fw_bold contact_title">Contact me</h2>
+          <h2 class="main_title fw_bold contact_title white">Contact me</h2>
           <p class="contact_txt">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
