Fix layout of Contact-me_section and of background images

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
       <section id="Contact" class="contact-me_section contact-me_sect_bg">
         <div class="content_wrapper">
-          <h2 class="main_title fw_bold contact_title white">Contact me</h2>
+          <h2 class="main_title fw_bold white">Contact me</h2>
           <p class="contact_txt">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
