Fix linter errors and animations

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 class="main_title neutral_b">I’m Radmila</h1>
           <h2 class="main_title neutral_b">Glad to see you!</h2>
         </hgroup>
-        <p class="descriptive_txt main-desc">
+        <p class="descriptive_txt animate main-desc">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hestiate to contact
@@ -250,7 +250,7 @@
             Myself
           </h1>
 
-          <p class="descriptive_txt">
+          <p class="descriptive_txt animate">
             Hello I’m a software developer! I can help you build a product ,
             feature or website Look through some of my work and experience! If
             you like what you see and have a project you need coded, don’t
@@ -349,7 +349,7 @@
       <section id="Contact" class="contact-me_section contact-me_sect_bg">
         <div class="content_wrapper">
           <h2 class="main_title fw_bold white">Contact me</h2>
-          <p class="contact_txt">
+          <p class="contact_txt animate">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
             to help with it
