--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Portfolio Template 1</title>
+    <title>Morrighan's Portfolio</title>
   </head>  
 
   <body>
@@ -65,20 +65,20 @@
         <p class="primary_n descriptive_txt fw_med upper">Let's connect</p>
         <ul class="social">
           <li>
-            <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+            <a href="#"><img src="icons/twitter.svg" alt="twitter logo icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="icons/linkedin.svg" alt="linkedin logo" /></a>
+            <a href="#"><img src="icons/linkedin.svg" alt="linkedin logo icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+            <a href="#"><img src="icons/medium.svg" alt="medium logo icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+            <a href="#"><img src="icons/github.svg" alt="github logo icon" /></a>
           </li>
           <li>
             <a href="#"
-              ><img src="icons/angellist.svg" alt="angellist logo"
+              ><img src="icons/angellist.svg" alt="angellist logo icon"
             /></a>
           </li>
         </ul>
@@ -88,7 +88,7 @@
     <section id="Portfolio" class="works_section">
       <article class="work_card bg_white">
         <div class="img">
-          <img src="./img/snapshoot1.png" alt="preview project 1" />
+          <img src="./img/snapshoot1.png" alt="project preview image" />
         </div>
 
         <div class="card_details">
@@ -129,7 +129,7 @@
 
       <article class="work_card bg_white">
         <div class="img">
-          <img src="./img/snapshoot2.png" alt="preview project 2" />
+          <img src="./img/snapshoot2.png" alt="project preview image" />
         </div>
 
         <div class="card_details">
@@ -170,7 +170,7 @@
 
       <article class="work_card bg_white">
         <div class="img">
-          <img src="./img/snapshoot3.png" alt="preview project 3" />
+          <img src="./img/snapshoot3.png" alt="project preview image" />
         </div>
 
         <div class="card_details">
@@ -211,7 +211,7 @@
 
       <article class="work_card bg_white">
         <div class="img">
-          <img src="./img/snapshoot4.png" alt="preview project 4" />
+          <img src="./img/snapshoot4.png" alt="project preview image" />
         </div>
 
         <div class="card_details">
@@ -254,10 +254,10 @@
     <div class="about_base bg_white">
       <section id="About" class="about_section">
         <div class="top">
-          <h1 class="main_title neutral_b">
+          <h2 class="main_title neutral_b">
             About <br />
             Myself
-          </h1>
+          </h2>
 
           <p class="descriptive_txt animate">
             Hello I’m a software developer! I can help you build a product ,
@@ -270,23 +270,23 @@
 
           <ul class="social">
             <li>
-              <a href="#"><img src="icons/github.svg" alt="github logo" /></a>
+              <a href="#"><img src="icons/github.svg" alt="github logo icon" /></a>
             </li>
             <li>
               <a href="#">
-                <img src="icons/linkedin.svg" alt="linkedin logo" />
+                <img src="icons/linkedin.svg" alt="linkedin logo icon" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="icons/angellist.svg" alt="angellist logo" />
+                <img src="icons/angellist.svg" alt="angellist logo icon" />
               </a>
             </li>
             <li>
-              <a href="#"><img src="icons/twitter.svg" alt="twitter logo" /></a>
+              <a href="#"><img src="icons/twitter.svg" alt="twitter logo icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="icons/medium.svg" alt="medium logo" /></a>
+              <a href="#"><img src="icons/medium.svg" alt="medium logo icon" /></a>
             </li>
           </ul>
 
