add label to the form's inputs

--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
           <form action="https://formspree.io/f/mdoyzdon" method="POST">
             <ul class="contact_form">
               <li>
+                <label for="name"></label>
                 <input
+                  id="name"
                   class="bg_white"
                   name="name"
                   type="text"
@@ -377,7 +379,9 @@
                 />
               </li>
               <li>
+                <label for="email"></label>
                 <input
+                  id="email"
                   class="bg_white"
                   name="email"
                   type="email"
@@ -386,6 +390,7 @@
                 />
               </li>
               <li>
+                <label for="message"></label>
                 <textarea
                   class="text-message bg_white"
                   name="message"
