--- a/index.html
+++ b/index.html
@@ -38,24 +38,19 @@
         <a
           href="#menu"
           class="btn xs-transparent_btn btn_flex_center menu_btn"
-          onclick="toggleMenu();"
           ><i class="material-icons primary_b">menu</i></a
         >
         <ul class="menu">
           <li class="btn xs-transparent_btn btn_flex_center">
-            <a href="#Portfolio" onclick="hideMenu();">Portfolio</a>
+            <a href="#Portfolio" >Portfolio</a>
           </li>
           <li class="btn xs-transparent_btn btn_flex_center">
-            <a href="#About" onclick="hideMenu();">About</a>
+            <a href="#About" >About</a>
           </li>
           <li class="btn xs-transparent_btn btn_flex_center">
-            <a href="#Contact" onclick="hideMenu();">Contact</a>
+            <a href="#Contact" >Contact</a>
           </li>
         </ul>
-
-        <!-- <a href="#menu" class="btn xs-transparent_btn btn_flex_center menu_btn"
-          ><i class="material-icons primary_b">menu</i></a
-        > -->
       </nav>
       <script type="text/javascript" src="menu.js"></script>
     </header>
