Add blur and prevent scroll of background page on mobile menu active, fix NavLinks font weight

--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
           </li>
         </ul>
       </nav>
-      <script type="text/javascript" src="menu.js"></script>
     </header>
     <!-- end toolbar -->
 
     <!-- start main -->
-    <main class="shapes_bg bg_white">
+    <main id="main" class="shapes_bg bg_white">
       <section class="headline">
         <hgroup>
           <h1 class="main_title neutral_b">I’m Radmila</h1>
@@ -438,5 +437,6 @@
         </div>
       </section>
     </div>
+    <script type="text/javascript" src="menu.js"></script>
   </body>
 </html>
