Add prevent page scroll when Modal is active

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <ul class="skill_content">
               <li class="skill_item">
                 <img
-                  src="./img/icon_js.png"
+                  src="./icons/icon_js.png"
                   class="skill_item_icon"
                   alt="Javascript Icon"
                 />
@@ -176,7 +176,7 @@
 
               <li class="skill_item">
                 <img
-                  src="./img/icon_html.png"
+                  src="./icons/icon_html.png"
                   class="skill_item_icon"
                   alt="Html Icon"
                 />
@@ -185,7 +185,7 @@
 
               <li class="skill_item">
                 <img
-                  src="./img/icon_css.png"
+                  src="./icons/icon_css.png"
                   class="skill_item_icon"
                   alt="CSS Icon"
                 />
