Remove double js files, Update html script links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -12,12 +15,8 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-
       gtag("config", "G-KSJKQX910P");
-    </script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </script>    
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -31,8 +30,7 @@
     <header class="bg_white">
       <div class="logo_placeholder">
         <a href="index.html" class="logo xs-transparent_btn primary_b"
-          >My Logo</a
-        >
+          >My Logo</a>
       </div>
       <nav>
         <a
@@ -281,7 +279,7 @@
     <div class="overlay"></div>
     <script src="js/menu.js"></script>
     <script src="js/insertions.js"></script>
-    <script src="js/insertions.js"></script>
+    <script src="js/toggleModals.js"></script>
     <script src="js/formValidation.js"></script>
   </body>
 </html>
