Update alert message position

--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
                   placeholder="your_email@mail.com"
                   required
                 />
-                <div class="alert_msg"></div>
               </li>
               <li>
                 <label for="message"></label>
@@ -267,6 +266,7 @@
                 ></textarea>
               </li>
               <li class="submit_btn">
+                <!-- <div class="alert_msg"></div> -->
                 <button type="submit" class="btn action_btn enabled">
                   Get in Touch
                 </button>
